Добавлена база данных. Написаны мапперы и методы, позволяющие сохранять пользователей, фильмы, жанры и рейтинги в базу данных и получать их из неё