@@ -3,83 +3,68 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
-import ru.yandex.practicum.filmorate.model.FriendshipStatus;
 import ru.yandex.practicum.filmorate.model.User;
-import ru.yandex.practicum.filmorate.storage.UserStorage;
-import ru.yandex.practicum.filmorate.validation.UserValidator;
+import ru.yandex.practicum.filmorate.storage.UserDbStorage;
 
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
-    private final UserStorage userStorage;
+    private final UserDbStorage userStorage;
 
     public User create(User user) {
-        UserValidator.validate(user);
-        fillNameIfEmpty(user);
         return userStorage.add(user);
     }
 
     public User update(User user) {
-        UserValidator.validate(user);
         getById(user.getId());
-        fillNameIfEmpty(user);
         return userStorage.update(user);
+    }
+
+    public User getById(int id) {
+        return userStorage.getById(id)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + id + " не найден"));
     }
 
     public List<User> getAll() {
         return userStorage.getAll();
     }
 
-    public User getById(int id) {
-        return userStorage.getById(id)
-                .orElseThrow(() ->
-                        new NotFoundException("Пользователь с id=" + id + " не найден"));
-    }
-
     public void addFriend(int userId, int friendId) {
-        User user = getById(userId);
-        User friend = getById(friendId);
-
-        user.getFriends().put(friendId, FriendshipStatus.PENDING);
-        friend.getFriends().put(userId, FriendshipStatus.CONFIRMED);
+        getById(userId);
+        getById(friendId);
+        userStorage.addFriend(userId, friendId);
     }
-
 
     public void removeFriend(int userId, int friendId) {
-        User user = getById(userId);
-        User friend = getById(friendId);
-
-        user.getFriends().remove(friendId);
-        friend.getFriends().remove(userId);
+        getById(userId);
+        getById(friendId);
+        userStorage.removeFriend(userId, friendId);
     }
 
     public List<User> getFriends(int userId) {
-        return getById(userId).getFriends().entrySet().stream()
-                .filter(e -> e.getValue() == FriendshipStatus.CONFIRMED)
-                .map(e -> getById(e.getKey()))
-                .toList();
+        getById(userId);
+        return userStorage.getFriends(userId);
     }
 
     public List<User> getCommonFriends(int userId, int otherId) {
-        User user = getById(userId);
-        User other = getById(otherId);
+        List<Integer> friends1 = userStorage.getFriends(userId)
+                .stream()
+                .map(User::getId)
+                .collect(Collectors.toList());
 
-        return user.getFriends().entrySet().stream()
-                .filter(e -> e.getValue() == FriendshipStatus.CONFIRMED)
-                .map(Map.Entry::getKey)
-                .filter(other.getFriends()::containsKey)
-                .filter(id -> other.getFriends().get(id) == FriendshipStatus.CONFIRMED)
+        List<Integer> friends2 = userStorage.getFriends(otherId)
+                .stream()
+                .map(User::getId)
+                .collect(Collectors.toList());
+
+        friends1.retainAll(friends2);
+
+        return friends1.stream()
                 .map(this::getById)
-                .toList();
-    }
-
-    private void fillNameIfEmpty(User user) {
-        if (user.getName() == null || user.getName().isBlank()) {
-            user.setName(user.getLogin());
-        }
+                .collect(Collectors.toList());
     }
 }
